Fix: Align the gap between the header and the images

--- a/src/components/Recycle/RecyclePage.scss
+++ b/src/components/Recycle/RecyclePage.scss
@@ -19,7 +19,7 @@
     list-style: none;
 
     margin: 0;
-    padding: 0;
+    padding: 0 6rem 0 0;
 
     .menu-item{
       display: flex;
